# Static-Site-Generator

./: .gitignore  main.sh  pyproject.toml  test.sh
docs/: index.html
src/: generator.py  htmlnode.py  inline.py  leafnode.py  main.py  markdown_block.py  markdown_inline.py  markdown_to_html.py  test_htmlnode.py  test_leafnode.py  test_texnode.py  test_textnode.py  textnode.py
src/tests/: test_generator.py  test_htmlnode.py  test_inline.py  test_markdown_block.py  test_markdown_to_html.py  test_markdownh_inline.py  test_textnode.py
static/: tolkienprofile.png:Zone.Identifier
